[package]
name = "phrase"
version = "0.2.1"
description = "Fast significant term and phrase learning and labeling"
authors = ["Stuart Axelbrooke <stuart@axelbrooke.com>"]
license = "Unlicense/MIT"
readme = "README.md"
keywords = ["topic", "nlp", "phrase"]
edition = "2018"

[dependencies]

rocket = "0.4"
rusqlite = "0.18"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rust-stemmers = "1.1"
clap = "2.33"
log = "0.4"
env_logger = "0.6"
regex = "1"
csv = "1"
lazy_static = "1"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
