[package]
name = "phrase"
version = "0.3.6"
description = "Fast significant term and phrase learning and labeling"
authors = ["Stuart Axelbrooke <stuart@axelbrooke.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["topic", "nlp", "phrase"]
edition = "2018"

[dependencies]

rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rust-stemmers = "1.1"
clap = "2.33"
log = "0.4"
env_logger = "0.6"
regex = "1"
csv = "1"
lazy_static = "1"
num_cpus = "1.10"
rayon = "1.0"

[dependencies.arrayvec]
version = "0.4"
features = ["std", "serde-1"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
