[package]
name = "phrase"
version = "0.3.7"
description = "Fast significant term and phrase learning and labeling"
authors = ["Stuart Axelbrooke <stuart@axelbrooke.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["topic", "nlp", "phrase"]
edition = "2021"

[dependencies]

serde = "1.0"
serde_json = "1"
serde_derive = "1"
rust-stemmers = "1"
clap = "2"
log = "0.4"
env_logger = "0.6"
regex = "1"
csv = "1"
lazy_static = "1"
num_cpus = "1"
rayon = "1"

[dependencies.arrayvec]
version = "0.4"
features = ["std", "serde-1"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]